--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="tvimage_content_description">TvImage</string>
     <string name="pcimage_content_description">PcImage</string>
     <string name="light_intensity_text">Light Intensity</string>
+    <string name="sending_message_text">Sent</string>
 </resources>
