--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="pcimage_content_description">PcImage</string>
     <string name="light_intensity_text">Light Intensity</string>
     <string name="sending_message_text">Sent</string>
+    <string name="action_settings">Settings</string>
 </resources>
